--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
 
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden> -->
+   <form name="contact" method="post" data-netlify="true" netlify-honeypot="bot-field" hidden>
+    <input type="hidden" name="form-name" value="contact"/>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
