--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden> -->
-   <form name="contact" method="post" data-netlify="true" netlify-honeypot="bot-field" hidden>
+   <form name="contact" method="post" data-netlify="true" netlify-honeypot="bot-field" hidden action="success">
     <input type="hidden" name="form-name" value="contact"/>
       <input type="text" name="name" />
       <input type="email" name="email" />
